# Trading_Backtester

v10/: README.md  app.py  pyproject.toml
v10/strategies/: custom_placeholder.py  expected_value.py  monte_carlo_bootstrap.py  probabilistic_time_edge.py  time_of_day_mean_reversion.py  volatility_breakout.py
v10/trading_backtester/: engine.py
v11/: Backtester.sln  README.md  app.py  pyproject.toml
v11/strategies/: sequential_reversal.py
v11/trading_backtester/: __init__.py  cli.py  engine.py  events.py  walkforward.py
v3/: README.md  pyproject.toml
v3/strategies/: gap_fade.py  overnight_gap.py  return_clustering.py
v3/trading_backtester/: __init__.py  catalog.py  cli.py
v4/: README.md  pyproject.toml
v4/strategies/: microstructure_imbalance.py  sign_sequence_prob.py
v4/trading_backtester/: __init__.py  cli.py  metrics.py
v5/: README.md  pyproject.toml
v5/strategies/: sigma_extreme.py
v5/trading_backtester/: __init__.py  cli.py  params.py
v6/: README.md  pyproject.toml
v6/strategies/: mean_reversion_price_changes.py
v6/trading_backtester/: __init__.py  cli.py  engine.py  walkforward.py
v7/: README.md  pyproject.toml
v7/trading_backtester/: __init__.py  catalog.py  (+1 more)
v8_streamlit_avalonia/: README.md  pyproject.toml
v9/: README.md  app.py  pyproject.toml
v9/src/Backtester.Avalonia/: MainWindow.axaml  MainWindow.axaml.cs  Program.cs
v9/src/Backtester.Avalonia/ViewModels/: MainWindowViewModel.cs
v9/strategies/: mean_reversion_returns.py  opening_range_breakout.py
v9/trading_backtester/: data.py  replay.py  strategy_surface.py
(+16 files in other folders)
