[project]
name = "trading_backtester"
version = "0.9.0"
description = "Backtesting sandbox with 16 statistical strategies"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "streamlit>=1.30", "plotly>=5.18"]

[project.scripts]
trading-backtester = "trading_backtester.cli:main"
